--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 
 <body>
 
-    <div class="container">
+    <div class="card bg-white text-white">
+        <img src="/img/3_2.jpg" class="card-img" alt="...">
+
+        <div class="card-img-overlay">
+            <figure class="text-center">
+                <h1 class="card-title text-truncate">Contact</h1>
+                <p class="card-text">Home / Contact</p>
+            </figure>
+
+
+        </div>
+    </div>
+
+    <div class="container pt-5">
 
 
         <div class="row">
@@ -31,10 +44,7 @@
                             <div class="row">
                                 <div class="col-md-2 mt-4 ">
 
-                                    <img 
-                                    src="..." 
-                                    class=""
-                                    alt="...">
+                                    <img src="..." class="" alt="...">
 
                                 </div>
                                 <div class="col">
@@ -51,10 +61,7 @@
                             <div class="row">
                                 <div class="col-md-2 mt-4">
 
-                                    <img 
-                                    src="..."
-                                    class=""
-                                    alt="...">
+                                    <img src="..." class="" alt="...">
 
                                 </div>
                                 <div class="col">
@@ -71,10 +78,7 @@
                             <div class="row ">
                                 <div class="col-md-2 mb-5 mt-4">
 
-                                    <img
-                                    src=""
-                                    class=""
-                                    alt="...">
+                                    <img src="" class="" alt="...">
 
                                 </div>
                                 <div class="col">
@@ -106,18 +110,14 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="form_name"></label>
-                                    <input id="form_name" type="text" name="name"
-                                        class="form-control bg-grey border-0 form-control-sm py-3" placeholder="Name"
-                                        required="required" data-error="Name is required.">
+                                    <input id="form_name" type="text" name="name" class="form-control bg-grey border-0 form-control-sm py-3" placeholder="Name" required="required" data-error="Name is required.">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="form_lastname"></label>
-                                    <input id="form_lastname" type="email" name="email"
-                                        class="form-control bg-grey border-0 form-control-sm py-3" placeholder="E-mail"
-                                        required="required" data-error="Valid E-mail is required.">
+                                    <input id="form_lastname" type="email" name="email" class="form-control bg-grey border-0 form-control-sm py-3" placeholder="E-mail" required="required" data-error="Valid E-mail is required.">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
@@ -126,19 +126,14 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="form_email"></label>
-                                    <input id="form_email" type="tel" name="tel"
-                                        class="form-control bg-grey border-0 form-control-sm py-3"
-                                        placeholder="Phone Number" required="required"
-                                        data-error="Phone number is required.">
+                                    <input id="form_email" type="tel" name="tel" class="form-control bg-grey border-0 form-control-sm py-3" placeholder="Phone Number" required="required" data-error="Phone number is required.">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="form_phone"></label>
-                                    <input id="form_phone" type="url" name="url"
-                                        class="form-control bg-grey border-0 form-control-sm py-3"
-                                        placeholder="Your Website">
+                                    <input id="form_phone" type="url" name="url" class="form-control bg-grey border-0 form-control-sm py-3" placeholder="Your Website">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
@@ -147,17 +142,12 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label for="form_message"></label>
-                                    <textarea id="form_message" name="message"
-                                        class="form-control bg-grey border-0 form-control-sm py-3"
-                                        placeholder="Your Message" rows="4" required="required"
-                                        data-error="Please,leave us a message."></textarea>
+                                    <textarea id="form_message" name="message" class="form-control bg-grey border-0 form-control-sm py-3" placeholder="Your Message" rows="4" required="required" data-error="Please,leave us a message."></textarea>
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <input type="submit"
-                                    class="btn btn-gradiental btn-send rounded-pill text-white px-3 py-3 mt-4 border-0"
-                                    value="Submit Now">
+                                <input type="submit" class="btn btn-gradiental btn-send rounded-pill text-white px-3 py-3 mt-4 border-0" value="Submit Now">
                             </div>
                         </div>
                         <div class="row">
