--- a/sevices.html
+++ b/sevices.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>SERVİCECS</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -93,10 +93,10 @@
             </div>
         </div>
     </div>
+    <!-- Background image -->
 </header>
 
 <body>
-
 
 
 
