Blog part completed
just done some changes. Need a few changes again tomorrow

--- a/blog.html
+++ b/blog.html
@@ -100,20 +100,169 @@
     <div style="height: 100px;"></div>
 
     <div class="row mx-auto mx-5">
-        <div class="col-md-7 col-lg7 col-xl-8 col-12 ">
+        <div class="col-md-7 col-lg7 col-xl-8 col-12 px-5">
 
             <div class="shadow p-3 mb-5 bg-body rounded-square">
-
-                <div class="card p-2 border-0 ">
-                    <img src="/img/1.jpg" class="card-img-top rounded-square" alt="...">
+                <div class="card  p-2 border-0 ">
+                    <div>
+                        <img src="/img/1.jpg" class="card-img-top position-relative rounded-square" alt="...">
+                        <button type=" submit " class=" btn btn-gradiental rounded-pill btn-lg p-2 position-absolute text-light " style="bottom: 15px; right: 15px;">Application Testing</button>
+                    </div>
                     <div class="card-body">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" style="text-decoration: none; color: black;">
+                            <h2 class="card-title" style="font-family: 'Livvic-bold'; font-weight: 400; font-size: 25px; letter-spacing: 0.5px; word-spacing: 1px;">Open Source Job Report Show More Openings Fewer</h2>
+                        </a>
+                        <p class="card-text" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 300;">We denounce with righteous indige nation and dislike men who are so beguiled and demo realized by the charms of pleasure of the moment, so blinded by desire, that...</p>
+                        <a href="#" class="text-decoration-none" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 500; ">Continue reading</a>
                     </div>
                 </div>
-
             </div>
+
+            <div class="shadow p-3 mb-5 bg-body rounded-square">
+                <div class="card  p-2 border-0 ">
+                    <div>
+                        <img src="/img/2.jpg" class="card-img-top position-relative rounded-square" alt="...">
+                        <button type=" submit " class=" btn btn-gradiental rounded-pill btn-lg p-2 position-absolute text-light " style="bottom: 15px; right: 15px;">Application Testing</button>
+                    </div>
+                    <div class="card-body">
+                        <a href="#" style="text-decoration: none; color: black;">
+                            <h2 class="card-title" style="font-family: 'Livvic-bold'; font-weight: 400; font-size: 25px; letter-spacing: 0.5px; word-spacing: 1px;">Tech Products That Makes Its Easier to Stay at Home</h2>
+                        </a>
+                        <p class="card-text" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 300;">We denounce with righteous indige nation and dislike men who are so beguiled and demo realized by the charms of pleasure of the moment, so blinded by desire, that...</p>
+                        <a href="#" class="text-decoration-none" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 500; ">Continue reading</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="shadow p-3 mb-5 bg-body rounded-square">
+                <div class="card  p-2 border-0 ">
+                    <div>
+                        <img src="/img/3.jpg" class="card-img-top position-relative rounded-square" alt="...">
+                        <button type=" submit " class=" btn btn-gradiental rounded-pill btn-lg p-2 position-absolute text-light " style="bottom: 15px; right: 15px;">Application Testing</button>
+                    </div>
+                    <div class="card-body">
+                        <a href="#" style="text-decoration: none; color: black;">
+                            <h2 class="card-title" style="font-family: 'Livvic-bold'; font-weight: 400; font-size: 25px; letter-spacing: 0.5px; word-spacing: 1px;">Necessity May Give Us Your Best Virtual Court System</h2>
+                        </a>
+                        <p class="card-text" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 300;">We denounce with righteous indige nation and dislike men who are so beguiled and demo realized by the charms of pleasure of the moment, so blinded by desire, that...</p>
+                        <a href="#" class="text-decoration-none" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 500; ">Continue reading</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="shadow p-3 mb-5 bg-body rounded-square">
+                <div class="card  p-2 border-0 ">
+                    <div>
+                        <img src="/img/4a.jpg" class="card-img-top position-relative rounded-square" alt="...">
+                        <button type=" submit " class=" btn btn-gradiental rounded-pill btn-lg p-2 position-absolute text-light " style="bottom: 15px; right: 15px;">Application Testing</button>
+                    </div>
+                    <div class="card-body">
+                        <a href="#" style="text-decoration: none; color: black;">
+                            <h2 class="card-title" style="font-family: 'Livvic-bold'; font-weight: 400; font-size: 25px; letter-spacing: 0.5px; word-spacing: 1px;">Servo Project Joins The Linux Foundation Fold Desco</h2>
+                        </a>
+                        <p class="card-text" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 300;">We denounce with righteous indige nation and dislike men who are so beguiled and demo realized by the charms of pleasure of the moment, so blinded by desire, that...</p>
+                        <a href="#" class="text-decoration-none" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 500; ">Continue reading</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="shadow p-3 mb-5 bg-body rounded-square">
+                <div class="card  p-2 border-0 ">
+                    <div>
+                        <img src="/img/5.jpg" class="card-img-top position-relative rounded-square" alt="...">
+                        <button type=" submit " class=" btn btn-gradiental rounded-pill btn-lg p-2 position-absolute text-light " style="bottom: 15px; right: 15px;">Application Testing</button>
+                    </div>
+                    <div class="card-body">
+                        <a href="#" style="text-decoration: none; color: black;">
+                            <h2 class="card-title" style="font-family: 'Livvic-bold'; font-weight: 400; font-size: 25px; letter-spacing: 0.5px; word-spacing: 1px;">Servo Project Joins The Linux Foundation Fold Desco</h2>
+                        </a>
+                        <p class="card-text" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 300;">We denounce with righteous indige nation and dislike men who are so beguiled and demo realized by the charms of pleasure of the moment, so blinded by desire, that...</p>
+                        <a href="#" class="text-decoration-none" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 500; ">Continue reading</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="shadow p-3 mb-5 bg-body rounded-square">
+                <div class="card  p-2 border-0 ">
+                    <div>
+                        <img src="/img/6.jpg" class="card-img-top position-relative rounded-square" alt="...">
+                        <button type=" submit " class=" btn btn-gradiental rounded-pill btn-lg p-2 position-absolute text-light " style="bottom: 15px; right: 15px;">Application Testing</button>
+                    </div>
+                    <div class="card-body">
+                        <a href="#" style="text-decoration: none; color: black;">
+                            <h2 class="card-title" style="font-family: 'Livvic-bold'; font-weight: 400; font-size: 25px; letter-spacing: 0.5px; word-spacing: 1px;">Necessity May Give Us Your Best Virtual Court System</h2>
+                        </a>
+                        <p class="card-text" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 300;">We denounce with righteous indige nation and dislike men who are so beguiled and demo realized by the charms of pleasure of the moment, so blinded by desire, that...</p>
+                        <a href="#" class="text-decoration-none" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 500; ">Continue reading</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="shadow p-3 mb-5 bg-body rounded-square">
+                <div class="card  p-2 border-0 ">
+                    <div>
+                        <img src="/img/7.jpg" class="card-img-top position-relative rounded-square" alt="...">
+                        <button type=" submit " class=" btn btn-gradiental rounded-pill btn-lg p-2 position-absolute text-light " style="bottom: 15px; right: 15px;">Application Testing</button>
+                    </div>
+                    <div class="card-body">
+                        <a href="#" style="text-decoration: none; color: black;">
+                            <h2 class="card-title" style="font-family: 'Livvic-bold'; font-weight: 400; font-size: 25px; letter-spacing: 0.5px; word-spacing: 1px;">Tech Products That Makes Its Easier to Stay at Home</h2>
+                        </a>
+                        <p class="card-text" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 300;">We denounce with righteous indige nation and dislike men who are so beguiled and demo realized by the charms of pleasure of the moment, so blinded by desire, that...</p>
+                        <a href="#" class="text-decoration-none" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 500; ">Continue reading</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="shadow p-3 mb-5 bg-body rounded-square">
+                <div class="card  p-2 border-0 ">
+                    <div>
+                        <img src="/img/8.jpg" class="card-img-top position-relative rounded-square" alt="...">
+                        <button type=" submit " class=" btn btn-gradiental rounded-pill btn-lg p-2 position-absolute text-light " style="bottom: 15px; right: 15px;">Application Testing</button>
+                    </div>
+                    <div class="card-body">
+                        <a href="#" style="text-decoration: none; color: black;">
+                            <h2 class="card-title" style="font-family: 'Livvic-bold'; font-weight: 400; font-size: 25px; letter-spacing: 0.5px; word-spacing: 1px;">Open Source Job Report Show More Openings Fewer</h2>
+                        </a>
+                        <p class="card-text" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 300;">We denounce with righteous indige nation and dislike men who are so beguiled and demo realized by the charms of pleasure of the moment, so blinded by desire, that...</p>
+                        <a href="#" class="text-decoration-none" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 500; ">Continue reading</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="shadow p-3 mb-5 bg-body rounded-square">
+                <div class="card  p-2 border-0 ">
+                    <div>
+                        <img src="/img/9.jpg" class="card-img-top position-relative rounded-square" alt="...">
+                        <button type=" submit " class=" btn btn-gradiental rounded-pill btn-lg p-2 position-absolute text-light " style="bottom: 15px; right: 15px;">Application Testing</button>
+                    </div>
+                    <div class="card-body">
+                        <a href="#" style="text-decoration: none; color: black;">
+                            <h2 class="card-title" style="font-family: 'Livvic-bold'; font-weight: 400; font-size: 25px; letter-spacing: 0.5px; word-spacing: 1px;">Types of Social Proof What its Makes Them Effective</h2>
+                        </a>
+                        <p class="card-text" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 300;">We denounce with righteous indige nation and dislike men who are so beguiled and demo realized by the charms of pleasure of the moment, so blinded by desire, that...</p>
+                        <a href="#" class="text-decoration-none" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 500; ">Continue reading</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="shadow p-3 mb-5 bg-body rounded-square">
+                <div class="card  p-2 border-0 ">
+                    <div>
+                        <img src="/img/10.jpg" class="card-img-top position-relative rounded-square" alt="...">
+                        <button type=" submit " class=" btn btn-gradiental rounded-pill btn-lg p-2 position-absolute text-light " style="bottom: 15px; right: 15px;">Application Testing</button>
+                    </div>
+                    <div class="card-body">
+                        <a href="#" style="text-decoration: none; color: black;">
+                            <h2 class="card-title" style="font-family: 'Livvic-bold'; font-weight: 400; font-size: 25px; letter-spacing: 0.5px; word-spacing: 1px;">Tech Firms Support Huawei Restriction, Balk at Cost</h2>
+                        </a>
+                        <p class="card-text" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 300;">We denounce with righteous indige nation and dislike men who are so beguiled and demo realized by the charms of pleasure of the moment, so blinded by desire, that...</p>
+                        <a href="#" class="text-decoration-none" style="font-family: 'Livvic-regular'; font-size: 15px; font-weight: 500; ">Continue reading</a>
+                    </div>
+                </div>
+            </div>
+
+
 
 
 
@@ -121,7 +270,7 @@
         </div>
 
 
-        <div class="col-md-4  col-lg-4 col-xl-4 col-12">
+        <div class="col-md-4  col-lg-4 col-xl-4 col-12 pe-5">
 
             <div class="shadow p-3 mb-5 bg-body rounded-square">
 
@@ -171,7 +320,7 @@ is required. ">
                         <div class="row">
                             <div class="col-4">
                                 <a href="#">
-                                    <img src="/img/1.jpg" class="m-3 img-thumbnail" style="height: auto ; width: 10rem;" alt="...">
+                                    <img src="/img/2.jpg" class="m-3 img-thumbnail" style="height: auto ; width: 10rem;" alt="...">
                                 </a>
 
                             </div>
@@ -191,7 +340,7 @@ is required. ">
                         <div class="row">
                             <div class="col-4">
                                 <a href="#">
-                                    <img src="/img/1.jpg" class="m-3 img-thumbnail" style="height: auto ; width: 10rem;" alt="...">
+                                    <img src="/img/3.jpg" class="m-3 img-thumbnail" style="height: auto ; width: 10rem;" alt="...">
                                 </a>
 
                             </div>
@@ -211,7 +360,7 @@ is required. ">
                         <div class="row">
                             <div class="col-4">
                                 <a href="#">
-                                    <img src="/img/1.jpg" class="m-3 img-thumbnail" style="height: auto ; width: 10rem;" alt="...">
+                                    <img src="/img/4a.jpg" class="m-3 img-thumbnail" style="height: auto ; width: 10rem;" alt="...">
                                 </a>
 
                             </div>
@@ -233,7 +382,8 @@ is required. ">
 
             <div class="shadow p-3 bg-body rounded-square mb-5 ">
 
-                <h3 class="mx-4 mt-4" style="font-family: 'Livvic-regular'; font-size: 20px; font-weight: 1000 ; ">Categories
+                <h3 class="mx-4 mt-4" style="font-family: 'Livvic-regular'; font-size: 20px; font-weight: 1000 ; ">
+                    Categories
                 </h3>
 
                 <hr />
