--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
     <title>BLOG</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <navbar>
