--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                 <div class="row rs-vertical-middle">
                     <div class="col-lg-2">
                         <div class="logo-part">
-                            <a href="index.html" style="display: block; height: 30px;"><img src="img/logo-dark_2.png" alt=""></a>
+                            <a href="index.html" style=""><img src="img/logo-dark_2.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-10 text-right">
